objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>My Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of Days from Create to Close</description>
        <formula>IF(IsClosed = TRUE,CloseDate, TODAY()) - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Closed__c</fullName>
        <description>$Amount (Closed Opportunty Only)</description>
        <formula>IF(IsClosed = TRUE, Amount , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Closed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Lost__c</fullName>
        <description>$Amount (Closed/Lost Opportunity Only)</description>
        <formula>IF(
AND(
IsClosed = TRUE,
IsWon = FALSE),
Amount ,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Lost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <description>$Amount (Open Opportunity Only)</description>
        <formula>IF(IsClosed = FALSE, Amount , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Open)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <description>$Amount (Closed/Won Opportunity Only)</description>
        <formula>IF(IsWon = TRUE, Amount , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$Amount(Won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate_Current_Month__c</fullName>
        <description>CloseDate Month of the Year = Current Month</description>
        <formula>MONTH(CloseDate) = MONTH(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseDate = Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDate_Day_TODAY__c</fullName>
        <description>Close Date Day of the Month &lt;= Current Day of the Month</description>
        <formula>DAY(CloseDate) &lt;= DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseDate(Day) &lt;= TODAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_MTD__c</fullName>
        <description>Close Date Month of the Year &lt;= Current Month of the Year</description>
        <formula>MONTH( CloseDate )
&lt;=
MONTH( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (MTD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_Quarter__c</fullName>
        <description>Close Date Quarter of the Year (without Year)</description>
        <formula>&quot;Q&quot;+ TEXT(CEILING(MONTH( CloseDate ) / 3 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (Quarter)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_YTD__c</fullName>
        <description>Close Date Day of the Year &lt;= Current Day of the Year</description>
        <formula>(CloseDate - DATE(YEAR( CloseDate ), 01, 01))
&lt;=
(TODAY() - DATE(YEAR( TODAY()), 01,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date (YTD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <description>Current $Amount</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Close_Date__c</fullName>
        <description>Current Close Date</description>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Probability__c</fullName>
        <description>Current Probability%</description>
        <formula>Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Probability%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>Current Stage</description>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Close__c</fullName>
        <description>Days Since Opportunity Close Date</description>
        <formula>IF(CloseDate &gt; TODAY(),
NULL,
TODAY() - CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Close__c</fullName>
        <description>Days Until Opportunity Close Date</description>
        <formula>IF(IsClosed = TRUE, NULL,
CloseDate - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_Me__c</fullName>
        <label>Delete Me</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsLost__c</fullName>
        <description>Hint: If it is Closed but it&apos;s not Won, it&apos;s ____?</description>
        <formula>AND(IsClosed = TRUE,IsWon = FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOpen__c</fullName>
        <description>Hint: It&apos;s the opposite of Closed</description>
        <formula>IsClosed = FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lapsed__c</fullName>
        <description>Open Opportunity with Lapsed Close Date</description>
        <formula>AND(
IsClosed = FALSE ,
CloseDate &lt; TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Multiselect_Picklist__c</fullName>
        <label>My Multiselect Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Number_based_global_value_set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Regular_Picklist__c</fullName>
        <label>My Regular Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>It&apos;s the Power of One (you&apos;re welcome!)</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pwned!</inlineHelpText>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Converts royally f*cked up Multiple Sales Processes and Stages into something a normal person can read.  Because if you create a Report and the people looking at it need a piece of paper and a pencil, or a calculator to figure out what that Report means, you built a shitty Report.  And you don&apos;t wanna build shitty Reports, because you&apos;re an Awesome Admin</description>
        <formula>IF(IsClosed = FALSE, &quot;Open&quot;,
IF(IsWon = TRUE , &quot;Won&quot;,
&quot;Lost&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pwned!</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Rule_Test__c</fullName>
        <description>Validation Rule Formula Logic Test</description>
        <formula>CreatedDate &gt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Rule Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa_external_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>metazoa_external_id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Rec_Type1</fullName>
        <active>true</active>
        <businessProcess>My Sales Process</businessProcess>
        <label>Account Rec Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Opp</fullName>
        <active>true</active>
        <businessProcess>My Sales Process</businessProcess>
        <label>Closed Opp</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Opp</fullName>
        <active>true</active>
        <businessProcess>My Sales Process</businessProcess>
        <label>Open Opp</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Date_Set_too_far_in_Future</fullName>
        <active>true</active>
        <errorConditionFormula>CloseDate &gt;  ADDMONTHS(TODAY(), 12)</errorConditionFormula>
        <errorMessage>You cannot set a CloseDate less than a year from TODAY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_set_to_before_TODAY</fullName>
        <active>true</active>
        <errorConditionFormula>CloseDate &lt; TODAY()</errorConditionFormula>
        <errorMessage>You cannot set a CloseDate less than TODAY</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>High_Value_Opportunity_Must_Be_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName,&quot;Closed Won&quot;),
ISPICKVAL(StageName,&quot;Closed Lost&quot;)),
(Amount &gt; 50000),
NOT(ISPICKVAL(Approval_Status__c,&quot;Approved&quot;)))</errorConditionFormula>
        <errorMessage>All high-value opportunities must be approved for closure. Click the
Approval Status button.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Opportunities_Can_Be_Accepted</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Approval_Status__c ,&quot;Rejected&quot;))</errorConditionFormula>
        <errorMessage>You can&apos;t save an opportunity that has not been been rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Opportunities_Can_Be_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Approval_Status__c ,&quot;Rejected&quot;)</errorConditionFormula>
        <errorMessage>You can&apos;t save an opportunity that has been rejected.</errorMessage>
    </validationRules>
</CustomObject>